validation + small sonar fixes